base/board-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board
  namespace: default
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: board
  template:
    metadata:
      labels:
        app: board
    spec:
      containers:
        - name: board
          image: 227250033304.dkr.ecr.ap-northeast-2.amazonaws.com/donkey-board:20240507114305
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
