base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: default
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: 227250033304.dkr.ecr.ap-northeast-2.amazonaws.com/donkey-frontend:20240516111005
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
