base/module2-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: module2
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: module2
  template:
    metadata:
      labels:
        app: module2
    spec:
      containers:
        - name: module2
          image: 227250033304.dkr.ecr.ap-northeast-2.amazonaws.com/msa-test:msa_module2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
