base/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: default
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: 227250033304.dkr.ecr.ap-northeast-2.amazonaws.com/donkey-payment:20240516143118
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
