base/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: 227250033304.dkr.ecr.ap-northeast-2.amazonaws.com/donkey-user:20240525105205
        ports:
        - containerPort: 8080
