base/board-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: board
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: board
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
