base/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: front
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
