base/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: payment
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
