base/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8080  # Ingress와 일치하도록 설정
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: user
