base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "unified-ingress"
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: eks-demo-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:227250033304:certificate/19bbbf4c-3590-410a-8ec4-64b387e53b12
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - www.dangnagwi.store
    secretName: tls-crt
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "front"
            port:
              number: 8080      
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: "user"
            port:
              number: 8080
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: "user"
            port:
              number: 8080     
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: "user"
            port:
              number: 8080
      - path: /loginForm
        pathType: Prefix
        backend:
          service:
            name: "user"
            port:
              number: 8080                 
      - path: /api_post
        pathType: Prefix
        backend:
          service:
            name: "board"
            port:
              number: 8080
      - path: /comment
        pathType: Prefix
        backend:
          service:
            name: "board"
            port:
              number: 8080
      - path: /region
        pathType: Prefix
        backend:
          service:
            name: "board"
            port:
              number: 8080
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: "payment"
            port:
              number: 8080
  - host: www.dangnagwi.store
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: "front"
            port:
              number: 8080
